:white_check_mark:[629] added unit tests for the product api
